# sifry

./: .gitignore  CMakeLists.txt  build.gradle  lint.xml  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
spa2/: build.gradle
spa2/src/main/: AndroidManifest.xml
spa2/src/main/cpp/: CMakeLists.txt
spa2/src/main/cpp/pcre-mini/: README  config.h
spa2/src/main/jni/: regrep.c
src/main/: AndroidManifest.xml
src/main/jni/: Android.mk  Application.mk  pcre.h  regrep.c  regrep.cpp  wrappers.h
src/main/res/drawable/: gradient_led_on.xml  hlist_separator.xml  shape_okraj.xml
src/main/res/drawable-v11/: btn_mytheme.xml
src/main/res/drawable-v4/: btn_mytheme.xml
src/main/res/drawable-v9/: btn_mytheme.xml
src/main/res/layout/: aid_entry.xml  aid_popup.xml  bitmap_dialog.xml  bottom_bar_layout.xml  braille_layout.xml  braillec_item.xml  brailled_layout.xml  brailler_item.xml  cisla_header.xml  cisla_header_ascii.xml  cisla_header_wide.xml  cisla_item.xml  cisla_item_ascii.xml  cisla_item_wide.xml  cislac_layout.xml  cislad_layout.xml  cislar_layout.xml  ctverecc_item.xml  esubs_dialog.xml  esubs_item.xml  esubs_layout.xml  frekvd_layout.xml  frekvr_item.xml  frekvr_layout.xml  gen_exp_list_layout.xml  gen_grid_item.xml  gen_group_item.xml  gen_letter_item.xml  gen_list_c_layout.xml  gen_list_item.xml  gen_list_layout.xml  grid_list_item.xml  help_layout.xml  kalendar_ac_item.xml  kalendar_layout.xml  licence_item.xml  main_item.xml  main_layout.xml  morse_item.xml  morsed_layout.xml  (+26 more)
src/main/res/layout-land/: brailled_layout.xml  cislad_layout.xml  frekvd_layout.xml  kalendar_layout.xml  main_layout.xml  morsed_layout.xml  regexp_layout.xml  semaford_layout.xml  subst_layout.xml  tabulkyd_layout.xml  transd_layout.xml  vlajkyd_layout.xml
src/main/res/layout-large/: zapisnik_dialog.xml
src/main/res/raw/: vlajky  (+1 more)
svg-android/: NOTICE  pom.xml  src
svg-android/docs/: help-doc.html  index.html
(+405 files in other folders)
